--- a/CSS/style.css
+++ b/CSS/style.css
@@ -241,7 +241,7 @@ html, body{
    padding:4em 0;
    text-align: center;
  }
- .testimonials li.one-fourth-other {
+ .testimonials li.one-fourth.other {
    padding: 2em 0;
    text-align: center;
 }
