Final Push, Deploying Blocbox

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -594,3 +594,6 @@ html, body{
    line-height: 18px;
    margin:5px 0 0;
  }
+.settings-btn { margin-top:0px!important; }
+
+.dropit-inverse .dropit-submenu li a { text-align: left; font-size:12px; float:none; }
